objects/ssot__Survey__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActiveSurveyVersionId__c</fullName>
        <label>Active Survey Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Survey Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__NamePrefix__c</fullName>
        <label>Name Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SurveyType__c</fullName>
        <label>Survey Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761230902_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey_ActiveSurveyVersionId_map_Sur_rel</label>
        <referenceTo>ssot__SurveyVersion__dlm</referenceTo>
        <relationshipLabel>Survey_ActiveSurveyVersionId_map_Sur_rel</relationshipLabel>
        <relationshipName>rel_1697761230902_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>